left-right selector changes

--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -92,7 +92,7 @@ body {
 	background: #94c000;
 	float: left;
 	width: 100%;
-	.left-column{
+	.views-row-first{
 		text-align: center;
 		padding-bottom: 4em;
 		h1{
@@ -123,7 +123,7 @@ body {
 			margin-left: 1em;
 		}
 	}
-	.right-column{
+	.views-row-last{
 		background: url('../images/background-right-column.png') no-repeat #e2e2e2;
     	background-size: cover;
     	.img-right-column{
