list-left, left-column and last selector changes

--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
@@ -40,11 +40,11 @@
 		margin-top: 2em;
 	}
 
-	.list-left{
+	.left-menu ul{
 		padding-left:0;
 	}
 
-	.list-left li.selected{
+	.left-menu ul li.selected{
 		display: list-item;
 	}	
 
