--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -1146,7 +1146,7 @@ header.navbar-default .navbar-collapse nav ul.menu li {
 	margin-top: 3em;
 }
 
-.list-left{
+.left-menu ul{
 	list-style: none;
 	li{
 		background-color: #daea96;
@@ -1363,7 +1363,7 @@ header.navbar-default .navbar-collapse nav ul.menu li {
     }
 }
 
-.box-latest-publications.last{
+.box-latest-publications.views-row-last{
     margin-right: 0;
 }
 
