--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
@@ -6,6 +6,51 @@
 		padding-right: 0px;
 	}
 
+	/* Splash page */
+	.intro-splash-20 {
+		.views-row-first{ 
+			padding-bottom: 1em;
+			h1{
+				font-size: 1.6em;
+				padding-top: 0.5em;
+			}
+			p{
+				max-width: 320px;
+				padding-bottom: 1em;
+
+			}
+			.btn-background-transparent{
+				max-width: 320px;
+				width: 94%;
+    			margin-bottom: 1em;
+			}
+		}
+	}
+
+	.before-the-campaign .content-box-before .box-before{
+		width: 100%;
+		margin-right: 1em;
+	}
+
+	ul.time-and-counters{
+		width: 94%;
+    	margin: 0 auto;
+	}
+
+	#block-hwc-homepage-splash-download-news-campaign > section > div.content-box-before > div:nth-child(3){
+		width: 100%;
+	}
+
+	#block-views-splash-previous-campaigns-splash > div > div > div{
+		width: 100%;
+		float: none;
+		margin: 0;
+	}
+
+	.before-the-campaign .content-box-before div:nth-child(1) > div.box-before-title:nth-child(2){
+		width: 90%;
+	}
+
 	/*Home*/
 	.priority-area-box {
 	    width: 100%;
@@ -28,6 +73,7 @@
 	.start-browsing .start-browsing-box{
 		width: 310px;
 		height: auto;
+		margin-right: 1em;
 	}
 
 	ul.time-and-counters li .counter-value{
@@ -42,10 +88,6 @@
 		h1{
 			font-size: 2.5em;
 		}
-	}
-
-	.intro-splash-20 .views-row-first h2{
-		color:grey;
 	}
 
 	.breadcrumb_hwc20{
