--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
@@ -1,5 +1,9 @@
 @media (max-width: 992px) {
 
+	body{
+		padding-top: 196px;
+	}
+
 	.container{
 		padding-left: 15px;
 		padding-right: 15px;
@@ -18,8 +22,9 @@
 		display: none;
 	}
 
-	body{
-		padding-top: 150px;
+	/*Splash page*/
+	.intro-splash-20 .views-row-first{
+		padding-bottom: 1em;
 	}
 
 	/*Home*/
