--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
@@ -50,3 +50,25 @@
 	}
 
 }
+
+@media (max-width: 1044px) {
+
+	#block-hwc-homepage-splash-download-news-campaign > section > div.content-box-before > div:nth-child(3){
+		width: 668px;
+	}
+
+	#block-views-splash-previous-campaigns-splash > div > div > div{
+		width: 48%;
+		float: left;
+		margin: 0;
+	}
+
+	.before-the-campaign .content-box-before div:nth-child(1) > div.box-before-title:nth-child(2){
+		width: 90%;
+	}
+
+	.before-the-campaign .content-box-before div:nth-child(1) > div.box-before-title:nth-child(2){
+	    padding-top: 0.5em;
+	}
+
+}
