--- a/docroot/sites/all/themes/hwc_frontend/less/style.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/style.less
@@ -16,3 +16,13 @@
 @import 'responsive-max-767.less';
 @import 'responsive-max-480.less';
 @import 'responsive-max-320.less'; 
+
+
+// HWC20
+@import 'hwc20.less';
+
+// Fixing responsive
+@import 'hwc20-responsive-min-1200.less';
+@import 'hwc20-responsive-max-992.less';
+@import 'hwc20-responsive-max-767.less';
+@import 'hwc20-responsive-max-480.less';
