--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -4,11 +4,11 @@
   src: url("https://stackpath.bootstrapcdn.com/bootstrap/3.3.6/fonts/glyphicons-halflings-regular.eot");
   src: url("https://stackpath.bootstrapcdn.com/bootstrap/3.3.6/fonts/glyphicons-halflings-regular.eot?#iefix") format("embedded-opentype"), url("https://stackpath.bootstrapcdn.com/bootstrap/3.3.6/fonts/glyphicons-halflings-regular.woff2") format("woff2"), url("https://stackpath.bootstrapcdn.com/bootstrap/3.3.6/fonts/glyphicons-halflings-regular.woff") format("woff"), url("https://stackpath.bootstrapcdn.com/bootstrap/3.3.6/fonts/glyphicons-halflings-regular.ttf") format("truetype"), url("https://stackpath.bootstrapcdn.com/bootstrap/3.3.6/fonts/glyphicons-halflings-regular.svg#glyphicons-halflingsregular") format("svg");
 }
-body.splash-page {
-  padding-top: 150px;
-}
 body {
-  padding-top: 203px;
+  padding-top: 213px;
+}
+body.logged-in {
+  padding-top: 264px !important;
 }
 .main-container.container {
   padding-bottom: 2em;
@@ -21,6 +21,10 @@ body {
   border-radius: 7px;
   font-weight: 600;
   position: relative;
+  font-size: 1.4rem;
+  max-width: 210px;
+  display: block;
+  float: left;
 }
 .btn-background-transparent:hover {
   background: #e5f1ac;
@@ -76,6 +80,10 @@ body {
   text-decoration: none;
 }
 /* Next Campaign 2020-2022 */
+.front .container-fluid {
+  padding-left: 0;
+  padding-right: 0;
+}
 .intro-splash-20 {
   background: #94c000;
   float: left;
@@ -210,6 +218,33 @@ ul.time-and-counters li .counter-label {
   margin-top: 1em;
   border-radius: 10px;
 }
+.before-the-campaign .content-box-before .box-before ul {
+  list-style: none;
+  padding-left: 0;
+}
+.before-the-campaign .content-box-before .box-before ul span.file img {
+  display: none;
+}
+.before-the-campaign .content-box-before .box-before ul span.file-size {
+  display: none;
+}
+.before-the-campaign .content-box-before .box-before ul a {
+  border: 1px solid #57575a;
+  border-radius: 5px;
+  background: url(../images/ico-download-button.png) 6px 5px no-repeat;
+  padding-left: 2.1em;
+  color: #57575a;
+  padding: 0.2em 0.7em 0.2em 2.1em;
+  background-size: 16px;
+  font-weight: 500;
+}
+.before-the-campaign .content-box-before .box-before ul a:hover {
+  text-decoration: none;
+  opacity: 0.8;
+  color: #a1c800;
+  border-radius: 15px;
+  transition: 0.5s;
+}
 .before-the-campaign .content-box-before div:nth-child(1) > div.box-before-title:nth-child(2) {
   padding-top: 0;
   border-top: 0;
@@ -278,6 +313,30 @@ ul.time-and-counters li .counter-label {
   margin-right: 2em;
   margin-top: 0.8em;
 }
+.before-the-campaign .content-box-before .two-box-column .more-link {
+  background-color: transparent;
+  padding-left: 0;
+}
+.before-the-campaign .content-box-before .two-box-column .more-link a {
+  background: url(../images/ico-plus-20.png) no-repeat 99% 2px #0030a0;
+  text-transform: uppercase;
+  color: #FFF;
+  border-top-left-radius: 7px;
+  border-bottom-left-radius: 7px;
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
+  padding: 3px 3.5em 4px 0.7em;
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  transition: all 0.3s;
+  float: left;
+}
+.before-the-campaign .content-box-before .two-box-column .more-link a:hover {
+  color: #FFF;
+  background: url(../images/ico-plus-20-hover.png) no-repeat 99% 2px #b9d643;
+  text-decoration: none;
+}
 .before-the-campaign .content-box-before .box-before.news {
   height: 100%;
   margin-bottom: 2em;
@@ -305,7 +364,7 @@ ul.time-and-counters li .counter-label {
   width: 100%;
   color: #FFF;
   padding-top: 2em;
-  padding-bottom: 6em;
+  padding-bottom: 4em;
 }
 .start-browsing h2 {
   text-align: center;
@@ -327,7 +386,7 @@ ul.time-and-counters li .counter-label {
   padding: 1em;
   margin-bottom: 1.5em;
   width: 320px;
-  height: 255px;
+  height: auto;
   margin-right: 2em;
 }
 .start-browsing .start-browsing-box h3 {
@@ -959,6 +1018,8 @@ header.navbar-default .navbar-collapse nav ul.menu li {
 }
 .footer {
   margin-top: 0;
+  height: auto;
+  padding-bottom: 15px;
 }
 .footer-section {
   font-size: 12px;
@@ -981,30 +1042,45 @@ header.navbar-default .navbar-collapse nav ul.menu li {
   border-left: 0;
 }
 /*Introductory Page > Article*/
-.breadcrumb_hwc20 {
+.breadcrumb {
+  background: transparent;
   padding: 15px 10px 5px 70px;
   list-style: none;
 }
-.breadcrumb_hwc20 li {
+.breadcrumb li {
   display: inline;
   font-size: 13px;
   color: white;
 }
-.breadcrumb_hwc20 li + li:before {
+.breadcrumb span {
+  color: #FFF;
+}
+.breadcrumb span {
+  color: #FFF;
+}
+.breadcrumb span a {
+  color: #FFF;
+  text-decoration: underline;
+}
+.breadcrumb span a:hover {
+  text-decoration: none;
+}
+.breadcrumb span:before {
   padding: 8px;
   color: white;
   content: ">\00a0";
 }
-.breadcrumb_hwc20 li a {
-  color: white;
-  text-decoration: underline;
+.breadcrumb span.first:before {
+  content: " ";
 }
-.breadcrumb_hwc20 li a:hover {
-  text-decoration: none;
+.breadcrumb .delimiter {
+  display: none;
 }
 .title-section {
   background: url(../images/banner-background-article.png);
   min-height: 225px;
+  margin-left: -15px;
+  margin-right: -15px;
   padding-top: 0;
 }
 .title-section h1 {
@@ -1040,16 +1116,16 @@ header.navbar-default .navbar-collapse nav ul.menu li {
 .left-menu ul li:hover a {
   color: white;
 }
-.left-menu ul .active {
+.left-menu ul .selected {
   background-color: #0030a0;
   position: relative;
 }
-.left-menu ul .active a {
+.left-menu ul .selected a {
   color: white;
   display: block;
   width: 90%;
 }
-.left-menu ul .active:before {
+.left-menu ul .selected:before {
   content: '';
   width: 15px;
   height: 15px;
@@ -1166,6 +1242,7 @@ header.navbar-default .navbar-collapse nav ul.menu li {
 .box-latest-publications {
   background: #FFF;
   width: 32.5%;
+  min-height: 235px;
   float: left;
   position: relative;
   margin-right: 1em;
@@ -1410,7 +1487,7 @@ span.title-select {
   padding-right: 5px;
   padding-top: 5px;
 }
-.content-languages-download select.new-select-style {
+.content-languages-download .new-select-style {
   width: 58%!important;
   background: url(../images/header/select.png) no-repeat scroll 96% center transparent;
   color: #003399;
@@ -1531,6 +1608,7 @@ div.publications-detail-right-column > a.download {
 }
 .content-fluid.green-background {
   background: #daea96;
+  padding-bottom: 1.5em;
 }
 .content-fluid.grey-background {
   background: #efefef;
@@ -1657,13 +1735,11 @@ label.option {
   padding-left: 10px;
   color: #003399;
 }
-select.new-select-style {
+.new-select-style {
   height: 35px;
-  border: 1px solid #003399;
-  border-radius: 5px;
-  -moz-appearance: button;
-  -webkit-appearance: button;
-  background: url(../images/green-select.png) no-repeat scroll 94% center #ffffff;
+  border: 1px solid #003399 !important;
+  border-radius: 5px !important;
+  background: url(../images/green-select.png) no-repeat scroll 94% center #ffffff !important;
   padding-left: 10px;
   width: 100%!important;
   color: #003399;
@@ -1742,6 +1818,10 @@ span.pages {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+}
+.container .menu-level-2 ul.menu.nav {
+  display: flex;
+  flex-wrap: wrap;
 }
 .container .content-box-sub {
   float: left;
@@ -1830,6 +1910,7 @@ span.pages {
 }
 .footer {
   background: #57575a;
+  min-height: auto;
 }
 .footer h2 {
   font-size: 15px;
@@ -1905,7 +1986,26 @@ span.pages {
     padding: 30px 10px 5px 70px;
   }
 }
+@media (max-width: 1044px) {
+  #block-hwc-homepage-splash-download-news-campaign > section > div.content-box-before > div:nth-child(3) {
+    width: 668px;
+  }
+  #block-views-splash-previous-campaigns-splash > div > div > div {
+    width: 48%;
+    float: left;
+    margin: 0;
+  }
+  .before-the-campaign .content-box-before div:nth-child(1) > div.box-before-title:nth-child(2) {
+    width: 90%;
+  }
+  .before-the-campaign .content-box-before div:nth-child(1) > div.box-before-title:nth-child(2) {
+    padding-top: 0.5em;
+  }
+}
 @media (max-width: 992px) {
+  body {
+    padding-top: 196px;
+  }
   .container {
     padding-left: 15px;
     padding-right: 15px;
@@ -1920,8 +2020,9 @@ span.pages {
   .breadcrumb_hwc20 {
     display: none;
   }
-  body {
-    padding-top: 150px;
+  /*Splash page*/
+  .intro-splash-20 .views-row-first {
+    padding-bottom: 1em;
   }
   /*Home*/
   #block-views-news-events .col-md-8 {
@@ -2096,6 +2197,42 @@ span.pages {
     padding-bottom: 1em;
     padding-right: 0px;
   }
+  /* Splash page */
+  .intro-splash-20 .views-row-first {
+    padding-bottom: 1em;
+  }
+  .intro-splash-20 .views-row-first h1 {
+    font-size: 1.6em;
+    padding-top: 0.5em;
+  }
+  .intro-splash-20 .views-row-first p {
+    max-width: 320px;
+    padding-bottom: 1em;
+  }
+  .intro-splash-20 .views-row-first .btn-background-transparent {
+    max-width: 320px;
+    width: 94%;
+    margin-bottom: 1em;
+  }
+  .before-the-campaign .content-box-before .box-before {
+    width: 100%;
+    margin-right: 1em;
+  }
+  ul.time-and-counters {
+    width: 94%;
+    margin: 0 auto;
+  }
+  #block-hwc-homepage-splash-download-news-campaign > section > div.content-box-before > div:nth-child(3) {
+    width: 100%;
+  }
+  #block-views-splash-previous-campaigns-splash > div > div > div {
+    width: 100%;
+    float: none;
+    margin: 0;
+  }
+  .before-the-campaign .content-box-before div:nth-child(1) > div.box-before-title:nth-child(2) {
+    width: 90%;
+  }
   /*Home*/
   .priority-area-box {
     width: 100%;
@@ -2117,6 +2254,7 @@ span.pages {
   .start-browsing .start-browsing-box {
     width: 310px;
     height: auto;
+    margin-right: 1em;
   }
   ul.time-and-counters li .counter-value {
     min-width: 85px;
@@ -2129,9 +2267,6 @@ span.pages {
   }
   .title-section h1 {
     font-size: 2.5em;
-  }
-  .intro-splash-20 .views-row-first h2 {
-    color: grey;
   }
   .breadcrumb_hwc20 {
     display: none;
@@ -2174,59 +2309,6 @@ span.pages {
   }
 }
 @media (max-width: 480px) {
-  .intro-splash-20 .views-row-first h2 {
-    color: blue;
-  }
-  /*dev3*/
-  .container .content-box-sub {
-    width: 100%;
-    margin-left: 3em;
-    margin-right: 3em;
-    margin-bottom: 2.5em;
-  }
-  .field.field-name-field-summary {
-    margin-left: 0;
-    margin-right: 0;
-  }
-  .publication-detail {
-    background: none;
-  }
-  .publication-detail h2 {
-    font-style: normal;
-    margin-left: 0;
-    margin-right: 0;
-    margin-top: 1em;
-  }
-  .publication-detail .back-to-publications {
-    text-align: left;
-    padding-left: 0;
-    padding-bottom: 1em;
-  }
-  .publication-detail .content-publication-info {
-    padding-bottom: 1em;
-  }
-  .publication-detail .publications-left-column {
-    background-color: #efefef;
-    width: 100%;
-    padding: 1em;
-    float: none;
-  }
-  .publication-detail .publications-right-column {
-    float: none;
-  }
-  .publication-detail .publications-row {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-  }
-  .publication-detail .share-this {
-    width: 100%;
-  }
-}
-@media (max-width: 480px) {
-  .intro-splash-20 .views-row-first h2 {
-    color: blue;
-  }
   /*dev3*/
   .container .content-box-sub {
     width: 100%;
