--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-480.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-480.less
@@ -1,6 +1,11 @@
 @media (max-width: 480px) { 
 
-	/*dev3*/
+	/* Splash page */
+
+	body {
+	    padding-top: 150px;
+	}
+	
 	.container{
 		.content-box-sub{
 			width: 100%;
