--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
@@ -10,8 +10,8 @@
 	}
 
 	.main-container h2{
-		margin-left: 0;
-		margin-right: 0;
+		margin-left: 15px;
+		margin-right: 15px;
 	}
 
 	ul.time-and-counters li {
