--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
@@ -5,8 +5,8 @@
 		padding-bottom: 1em;
 		padding-right: 0px;
 	}
+	
 
-	/* Splash page */
 	.intro-splash-20 {
 		.views-row-first{ 
 			padding-bottom: 1em;
@@ -32,9 +32,19 @@
 		margin-right: 1em;
 	}
 
-	ul.time-and-counters{
-		width: 94%;
-    	margin: 0 auto;
+	.comming-soon h2{
+		width: 100%;
+	}
+
+	ul.time-and-counters {
+	    width: 255px;
+	    margin: 0 auto;
+	    padding-top: 1em;
+		li .counter-label {
+			width: 100%;
+		    padding-top: 0;
+		    padding-bottom: 1em;
+		}
 	}
 
 	#block-hwc-homepage-splash-download-news-campaign > section > div.content-box-before > div:nth-child(3){
