--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
@@ -60,7 +60,7 @@
 	#block-views-splash-previous-campaigns-splash > div > div > div{
 		width: 48%;
 		float: left;
-		margin: 0;
+		margin: 0 2% 0 0;
 	}
 
 	.before-the-campaign .content-box-before div:nth-child(1) > div.box-before-title:nth-child(2){
