HW20-34 - HWC20 - Articles Graphical design

--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-480.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-480.less
@@ -5,7 +5,12 @@
 	body {
 	    padding-top: 150px;
 	}
-	
+
+	.page_title h1 {
+    	font-size: 2em;
+    	width: 320px;
+	}
+
 	.container{
 		.content-box-sub{
 			width: 100%;
