--- a/docroot/sites/all/themes/hwc_frontend/css/rewrite.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/rewrite.css
@@ -44,6 +44,10 @@ header.navbar-default .navbar-collapse nav ul.menu li > span.nolink{
     padding-right: 3px;
 }
 
+header.navbar-default .campaigns-header .navbar-header .header_top_bar .region-above-header{
+    min-width: 282px;
+}
+
 .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus{
     background-color: #003399;
 }
@@ -123,6 +127,10 @@ article .hwc-share-widget ul{
 
 .hwc-share-widget ul li a{
     height: 20px !important;
+}
+
+.hwc-share-widget ul li:hover{
+    opacity: 0.8;
 }
 
 /*Publications*/
