--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
@@ -9,6 +9,19 @@
 		padding-right: 15px;
 	}
 
+	.page_title h1{
+		font-size: 2.8em;
+	    width: 480px;
+	}
+
+	#block-text-resize-0, #block-hwc-hwc-print-friendly{
+		display: none;
+	}
+
+	#block-on-the-web-0{
+		float: right;
+	}
+
 	.main-container h2{
 		margin-left: 15px;
 		margin-right: 15px;
@@ -43,6 +56,7 @@
 	/*Introductory page article*/
 	.related-resources{
 		margin-top: 2em;
+		padding-bottom: 1em;
 	}
 
 	.left-menu ul{
