HW20-33 - HWC20 - Introductory page Graphical design

--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
@@ -149,6 +149,11 @@
 		display: none;
 	}
 
+	/* Subhome */
+	.container .content-box-sub{
+		width: 48.7%;
+	}
+
 	/*Publications page*/
 
 	.page-publications .main-container {
