--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -2064,7 +2064,7 @@ span.pages {
 .container .content-box-sub {
   float: left;
   width: 23.7%;
-  margin-right: 1em;
+  margin-right: 0.7em;
   margin-bottom: 3em;
   display: flex;
 }
@@ -2243,14 +2243,14 @@ span.pages {
 }
 @media (max-width: 992px) {
   body {
-    padding-top: 196px;
+    padding-top: 190px;
   }
   .container {
     padding-left: 15px;
     padding-right: 15px;
   }
   .page_title h1 {
-    font-size: 2.8em;
+    font-size: 2.6em;
     width: 480px;
   }
   #block-text-resize-0,
@@ -2263,6 +2263,19 @@ span.pages {
   .main-container h2 {
     margin-left: 15px;
     margin-right: 15px;
+  }
+  .region.region-sidebar-first.well {
+    padding-bottom: 0;
+    margin-bottom: 0;
+  }
+  .node-article .hwc-share-widget {
+    padding-top: 0;
+  }
+  header.navbar-default .campaigns-header .row:first-of-type {
+    padding: 0;
+  }
+  .navbar-default {
+    border-color: transparent;
   }
   ul.time-and-counters li {
     width: 100px;
@@ -2281,6 +2294,10 @@ span.pages {
   .row-newsletter-social {
     background: #acc700;
     padding-bottom: 2em;
+  }
+  /*Sub homes*/
+  .container .content-box-sub {
+    margin-right: 0;
   }
   /*Introductory page article*/
   .related-resources {
@@ -2566,6 +2583,10 @@ span.pages {
   .home-intro .second-row-left-column:after {
     display: none;
   }
+  /* Subhome */
+  .container .content-box-sub {
+    width: 48.7%;
+  }
   /*Publications page*/
   .page-publications .main-container {
     padding-right: 0 !important;
@@ -2600,7 +2621,7 @@ span.pages {
 @media (max-width: 480px) {
   /* Splash page */
   body {
-    padding-top: 150px;
+    padding-top: 147px;
   }
   .page_title h1 {
     font-size: 2em;
