--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
@@ -1,7 +1,7 @@
 @media (max-width: 992px) {
 
 	body{
-		padding-top: 196px;
+		padding-top: 190px;
 	}
 
 	.container{
@@ -10,7 +10,7 @@
 	}
 
 	.page_title h1{
-		font-size: 2.8em;
+		font-size: 2.6em;
 	    width: 480px;
 	}
 
@@ -25,6 +25,23 @@
 	.main-container h2{
 		margin-left: 15px;
 		margin-right: 15px;
+	}
+
+	.region.region-sidebar-first.well{
+		padding-bottom: 0;
+		margin-bottom: 0;
+	}
+
+	.node-article .hwc-share-widget{
+		padding-top: 0;
+	}
+
+	header.navbar-default .campaigns-header .row:first-of-type{
+		padding: 0;
+	}
+
+	.navbar-default{
+		border-color: transparent;
 	}
 
 	ul.time-and-counters li {
@@ -53,6 +70,13 @@
 	}
 
 
+	/*Sub homes*/
+
+	.container .content-box-sub{
+		margin-right: 0;
+	}
+
+ 
 	/*Introductory page article*/
 	.related-resources{
 		margin-top: 2em;
