--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
@@ -1,7 +1,7 @@
 @media (max-width: 992px) {
 
-	body{
-		padding-top: 190px;
+	body {
+		padding-top: 217px;
 	}
 
 	.container{
@@ -245,6 +245,15 @@
 		position:static;
 		top:auto;
 		right: auto;
+	}
+
+	/* General Search */
+	.page-search .region.region-content .view-search .view-header{
+		margin-bottom: 1em;
+	}
+
+	.page-search .region-sidebar-first .block.block-facetapi h2{
+		background-color: transparent;
 	}
 
 	/*Footer*/
